# Opal

./: CMakeLists.txt  LICENSE  README.md
docs/: grammar.bnf
include/: console.h  file_loader.h  lexer.h  perf_test.h
include/lexer/: lex_utils.h  lexer.h  utils.h
include/lexer/lexers/: lex_boolean.h  lex_char.h  lex_comment.h  lex_control_flow.h  lex_declaration.h  lex_float.h  lex_int.h  lex_misc.h  lex_null.h  lex_string.h  lex_variable.h  types.h
include/lexer/lexers/types/: lex_boolean.h  lex_byte.h  lex_char.h  lex_float.h  lex_int.h  lex_null.h  lex_string.h
include/parser/: parse_utils.h  parser.h
include/parser/parsers/: parse_class.h  parse_condition.h  parse_for.h  parse_function.h  parse_literal.h  parse_parameter.h  parse_switch.h  parse_variable.h  parse_while.h
opal/: main.opal
src/: console.c  file_loader.c  lexer.c  main.c  perf_test.c
src/lexer/: lex_utils.c  lexer.c  utils.c
src/lexer/lexers/: lex_boolean.c  lex_char.c  lex_comment.c  lex_control_flow.c  lex_declaration.c  lex_float.c  lex_int.c  lex_misc.c  lex_null.c  lex_string.c  lex_variable.c
src/lexer/lexers/types/: lex_boolean.c  lex_char.c  lex_float.c  lex_int.c  lex_null.c  lex_string.c
src/parser/: parse_utils.c  parser.c
src/parser/parsers/: parse_function.c  parse_literal.c  parse_parameter.c  parse_variable.c
test/: main.opal
